crates/slopty-agent/tests/snapshots/conversation__conversation__compact.snap
---
source: crates/slopty-agent/tests/conversation.rs
expression: "decode(\"compact\").snapshot()"
---
- id: Main
  origin: ~
  entries:
    - id: 00000000-0000-4000-8000-000000000003
      at_ms: 1790482610982
      body:
        Prompt:
          text:
            text: "Reply with the single word \"ready\"."
            lines: 1
            chars: 35
            full: ~
          images: []
          command: ~
    - id: "00000000-0000-4000-8000-000000000015:0"
      at_ms: 1790482612393
      body:
        Thinking:
          text: "The user is asking me to reply with the single word \"ready\". This is a simple request that doesn't require any tool calls or analysis. I should just respond with the word \"ready\"."
          lines: 1
          chars: 179
          full: ~
    - id: "00000000-0000-4000-8000-000000000016:0"
      at_ms: 1790482612404
      body:
        Text:
          text: ready
          lines: 1
          chars: 5
          full: ~
    - id: 00000000-0000-4000-8000-000000000020
      at_ms: 1790482628887
      body:
        Compact:
          trigger: manual
          pre_tokens: 20445
          post_tokens: 867
          summary:
            text: "This session is being continued from a previous conversation that ran out of context. The summary below covers the earlier portion of the conversation.\n\nSummary:\n1. Primary Request and Intent:\n   User requested acknowledgment of readiness, then requested a detailed conversation summary in text-only format following a specified template structure.\n\n2. Key Technical Concepts:\n   - Claude Haiku 4.5 LLM model (claude-haiku-4-5-20251001)\n   - Development environment: darwin platform, zsh shell, /work (non-git directory)\n   - Available tools: Read, Edit, Write, Bash, Agent, Skill, and various deferred tools\n   - Attribution requirements for commits and PRs\n\n3. Files and Code Sections:\n   - None accessed, modified, or created\n\n4. Errors and fixes:\n   - No errors encountered\n\n5. Problem Solving:\n   - No problems requiring resolution have occurred\n\n6. All user messages:\n   - \"Reply with the single word 'ready'.\"\n   - Current request for comprehensive conversation summary in text-only format with specific template requirements\n\n7. Pending Tasks:\n   - None initiated\n\n8. Current Work:\n   - Generating this conversation summary as explicitly requested\n\n9. Optional Next Step:\n   - Await user's next development task request\n\nIf you need specific details from before compaction (like exact code snippets, error messages, or content you generated), read the full transcript at: /home/user/.claude/projects/-work/00000000-0000-4000-8000-000000000001.jsonl\nContinue the conversation from where it left off without asking the user any further questions. Resume directly — do not acknowledge the summary, do not recap what was happening, do not preface with \"I'll continue\" or similar. Pick up the last task as if the break never happened."
            lines: 36
            chars: 1737
            full: ~
    - id: 00000000-0000-4000-8000-000000000024
      at_ms: 1790482612459
      body:
        Prompt:
          text:
            text: "Summarize only the user's requests, in one sentence."
            lines: 1
            chars: 52
            full: ~
          images: []
          command: /compact
    - id: 00000000-0000-4000-8000-000000000025
      at_ms: 1790482629010
      body:
        Note:
          kind: Command
          text:
            text: "Compacted PreCompact [/xtask fixtures hook-sink /hooks] completed successfully\nPostCompact [/xtask fixtures hook-sink /hooks] completed successfully"
            lines: 2
            chars: 148
            full: ~
          retry: ~
          stop: ~
  tasks: []
  turns:
    - prompt: 00000000-0000-4000-8000-000000000003
      started_ms: 1790482610982
      ended_ms: 1790482612451
      models:
        - claude-haiku-4-5-20251001
      requests: 1
      usage:
        input: 10
        cache_read: 20383
        cache_write: 0
        output: 51
        thinking: 45
      context_tokens: 20393
      mode: default
      stop: end_turn
    - prompt: 00000000-0000-4000-8000-000000000024
      started_ms: 1790482612459
      ended_ms: ~
      models: []
      requests: 0
      usage:
        input: 0
        cache_read: 0
        cache_write: 0
        output: 0
        thinking: 0
      context_tokens: ~
      mode: ~
      stop: ~
